# jip

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/netcore/: Cargo.toml
crates/netcore-diag/: Cargo.toml
crates/netcore-diag/src/: lib.rs
crates/netcore-firewall/: Cargo.toml
crates/netcore-firewall/src/: lib.rs
crates/netcore-iproute/: Cargo.toml
crates/netcore-iproute/src/: lib.rs  mapping.rs  raw.rs
crates/netcore-iproute/testdata/: addr.json  neigh.json  route4.json  route_get_1.1.1.1.json
crates/netcore-netlink/: Cargo.toml
crates/netcore-netlink/examples/: dump.rs  sockdump.rs
crates/netcore-netlink/src/: lib.rs  sockdiag.rs  wifi.rs
crates/netcore-nm/: Cargo.toml
crates/netcore-nm/examples/: profiles.rs
crates/netcore-nm/src/: dbus.rs  lib.rs
crates/netcore-probe/: Cargo.toml
crates/netcore-probe/examples/: trace.rs
crates/netcore-probe/src/: icmp.rs  lib.rs
crates/netcore-resolver/: Cargo.toml
crates/netcore-resolver/examples/: probe.rs
crates/netcore-resolver/src/: lib.rs  resolved.rs
crates/netcore/src/: connection.rs  diag.rs  dns.rs  fixture.rs  lib.rs  link.rs  path.rs  process.rs  service.rs  traits.rs
crates/nftables-netlink/: .gitignore  Cargo.toml
crates/nftables-netlink/src/: constants.rs  error.rs  lib.rs
crates/nftables-netlink/src/codec/: attr.rs
crates/nftables-netlink/src/objects/: chain.rs  expr.rs  mod.rs  rule.rs  table.rs
crates/nftables-netlink/src/ops/: dump.rs
demo/: Dockerfile  demo.tape
demo/fake-output/: check-broken.txt  check-ok.txt  listen.txt  overview-broken.txt  overview-ok.txt  reach-broken.txt  reach-ok.txt  wifi.txt
demo/scripts/: docker-shell  jip-wrapper
docs/: demo.tape
jip-cli/: Cargo.toml
jip-cli/src/: main.rs  theme.rs
jip-cli/src/render/: check.rs  connection.rs  json.rs  listen.rs  mod.rs  profiles.rs  raw.rs  reach.rs  who.rs  wifi.rs
