[workspace]
resolver = "3"
members = [
    "crates/netcore",
    "crates/netcore-diag",
    "crates/netcore-firewall",
    "crates/netcore-netlink",
    "crates/netcore-nm",
    "crates/netcore-probe",
    "crates/netcore-resolver",
    "crates/nftables-netlink",
    "jip-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PoHsuanLai/jip"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
