[package]
name = "jip-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "jip — a modern CLI for Linux networking."
keywords = ["networking", "cli", "linux", "diagnostics", "wifi"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "jip"
path = "src/main.rs"

[dependencies]
netcore = { path = "../crates/netcore" }
netcore-diag = { path = "../crates/netcore-diag" }
netcore-netlink = { path = "../crates/netcore-netlink" }
netcore-nm = { path = "../crates/netcore-nm" }
netcore-firewall = { path = "../crates/netcore-firewall" }
netcore-resolver = { path = "../crates/netcore-resolver" }
netcore-probe = { path = "../crates/netcore-probe" }
clap = { version = "4", features = ["derive", "wrap_help"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
anstream = "0.6"
anstyle = "1"
tabled = { version = "0.20", features = ["ansi"] }
