[package]
name = "jip-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "jip — a modern CLI for Linux networking."
keywords = ["networking", "cli", "linux", "diagnostics", "wifi"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "jip"
path = "src/main.rs"

[dependencies]
netcore = { path = "../crates/netcore", version = "0.1" }
netcore-diag = { path = "../crates/netcore-diag", version = "0.1" }
netcore-netlink = { path = "../crates/netcore-netlink", version = "0.1" }
netcore-nm = { path = "../crates/netcore-nm", version = "0.1" }
netcore-firewall = { path = "../crates/netcore-firewall", version = "0.1" }
netcore-resolver = { path = "../crates/netcore-resolver", version = "0.1" }
netcore-probe = { path = "../crates/netcore-probe", version = "0.1" }
clap = { version = "4", features = ["derive", "wrap_help"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
anstream = "0.6"
anstyle = "1"
tabled = { version = "0.20", features = ["ansi"] }
