[package]
name = "jip-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "jip — a modern CLI for Linux networking."
keywords = ["networking", "cli", "linux", "diagnostics", "wifi"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[[bin]]
name = "jip"
path = "src/main.rs"

[dependencies]
netcore = { package = "jip-core", path = "../crates/netcore", version = "0.1" }
netcore-diag = { package = "jip-diag", path = "../crates/netcore-diag", version = "0.1" }
netcore-netlink = { package = "jip-netlink", path = "../crates/netcore-netlink", version = "0.1" }
netcore-nm = { package = "jip-nm", path = "../crates/netcore-nm", version = "0.1" }
netcore-firewall = { package = "jip-firewall", path = "../crates/netcore-firewall", version = "0.1" }
netcore-resolver = { package = "jip-resolver", path = "../crates/netcore-resolver", version = "0.1" }
netcore-probe = { package = "jip-probe", path = "../crates/netcore-probe", version = "0.1" }
clap = { version = "4", features = ["derive", "wrap_help"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
anstream = "0.6"
anstyle = "1"
tabled = { version = "0.20", features = ["ansi"] }
