[package]
name = "netcore-diag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Diagnostician: composes netcore capability traits into Health and Path."
keywords = ["networking", "linux", "diagnostics"]
categories = ["network-programming", "os::linux-apis"]

[dependencies]
netcore = { path = "../netcore", version = "0.1" }
url = "2"

[dev-dependencies]
netcore = { path = "../netcore", version = "0.1", features = ["fixture"] }
