[package]
name = "jip-diag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Diagnostician: composes netcore capability traits into Health and Path."
keywords = ["networking", "linux", "diagnostics"]
categories = ["network-programming", "os::linux-apis"]

[lib]
name = "netcore_diag"

[dependencies]
netcore = { package = "jip-core", path = "../netcore", version = "0.1" }
url = "2"

[dev-dependencies]
netcore = { package = "jip-core", path = "../netcore", version = "0.1", features = ["fixture"] }
