[package]
name = "netcore-firewall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Firewall backend for netcore: nftables netlink → FirewallVerdict."

[dependencies]
netcore = { path = "../netcore" }
nftables-netlink = { path = "../nftables-netlink" }
thiserror = { workspace = true }
