[package]
name = "jip-firewall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Firewall backend for netcore: nftables netlink → FirewallVerdict."
keywords = ["networking", "linux", "nftables", "firewall"]
categories = ["network-programming", "os::linux-apis"]

[lib]
name = "netcore_firewall"

[dependencies]
netcore = { package = "jip-core", path = "../netcore", version = "0.1" }
nftables_netlink = { package = "jip-nftables", path = "../nftables-netlink", version = "0.1" }
thiserror = { workspace = true }
