[package]
name = "netcore-iproute"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "iproute2 backend for netcore: `ip -j *` parsing into InventoryRaw + Inventory."

[dependencies]
netcore = { path = "../netcore" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
test-runner = []

[dev-dependencies]
netcore = { path = "../netcore" }
