[package]
name = "netcore-netlink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "rtnetlink backend for netcore: InventoryRaw + Inventory via Linux netlink."
keywords = ["networking", "linux", "netlink", "rtnetlink"]
categories = ["network-programming", "os::linux-apis"]

[dependencies]
netcore = { path = "../netcore", version = "0.1" }
rtnetlink = "0.20"
netlink-packet-route = "0.28"
netlink-packet-sock-diag = { version = "0.4", features = ["rich_nlas"] }
# sock-diag 0.4 is built against netlink-packet-core 0.7 — pin to match so
# `SockDiagMessage: NetlinkSerializable` resolves.
netlink-packet-core = "0.7"
netlink-sys = "0.8"
futures = "0.3"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
libc = "0.2"
thiserror = { workspace = true }
wl-nl80211 = "0.4.0"
