[package]
name = "jip-resolver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Resolver backend for netcore: systemd-resolved D-Bus + libc getaddrinfo fallback."
keywords = ["networking", "linux", "dns", "resolver"]
categories = ["network-programming", "os::linux-apis"]

[lib]
name = "netcore_resolver"

[dependencies]
netcore = { package = "jip-core", path = "../netcore", version = "0.1" }
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time"] }
serde = { workspace = true }
thiserror = { workspace = true }
